--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,13 @@
     <meta content='text/html; charset=utf-8' http-equiv='content-type'>
 
     <script defer src='./index.tsx'></script>
+
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
 
   <body>
