add montserrat font

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <script defer src='./index.tsx'></script>
 
+    <link rel="stylesheet" href="./fonts/montserrat.css">
     <style>
       html, body {
         margin: 0;
