--- a/client/index.html
+++ b/client/index.html
@@ -15,5 +15,14 @@
     </noscript>
 
     <div id='root'></div>
+    <audio autoplay loop>
+      <source src="./audio/yeet.mp3" type="audio/mpeg">
+      yeet
+    </audio>
+    <script>
+      window.onload = function() {
+        var context = new AudioContext();
+      }
+    </script>
   </body>
 </html>
